--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -15,10 +15,10 @@
       "execution_count": null,
       "metadata": {
         "id": "VjYy0F2gZIPR",
-        "outputId": "56abda1f-67c5-439f-864b-4fd0b867201f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "56abda1f-67c5-439f-864b-4fd0b867201f"
       },
       "outputs": [
         {
@@ -111,7 +111,41 @@
             "2025-07-01 17:44:09.904500: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
             "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
             "Started worker with PID 636\n",
-            "App started successful. Use the app with http://127.0.0.1:7865/ or 127.0.0.1:7865 or https://d3eb9b9ceaca434239.gradio.live\n"
+            "App started successful. Use the app with http://127.0.0.1:7865/ or 127.0.0.1:7865 or https://d3eb9b9ceaca434239.gradio.live\n",
+            "[Parameters] Adaptive CFG = 7\n",
+            "[Parameters] CLIP Skip = 2\n",
+            "[Parameters] Sharpness = 2\n",
+            "[Parameters] ControlNet Softness = 0.25\n",
+            "[Parameters] ADM Scale = 1.5 : 0.8 : 0.3\n",
+            "[Parameters] Seed = 0\n",
+            "[Parameters] CFG = 30\n",
+            "[Fooocus] Loading control models ...\n",
+            "[Parameters] Sampler = dpmpp_2m_sde_gpu - karras\n",
+            "[Parameters] Steps = 30 - 15\n",
+            "[Fooocus] Initializing ...\n",
+            "[Fooocus] Loading models ...\n",
+            "Refiner unloaded.\n",
+            "[Fooocus] Processing prompts ...\n",
+            "[Fooocus] Preparing Fooocus text #1 ...\n",
+            "[Prompt Expansion] ((realistic busty pornstar)), long black hair, tan skin, seductive eyes, heavy makeup, posing on bed, lingerie, glamour lighting, soft shadows, shallow depth of field, seductive look, photorealistic, 8k, NSFW, iconic, fine light, highly detailed, intricate, elegant, sharp focus, dramatic cinematic perfect, beautiful\n",
+            "[Fooocus] Preparing Fooocus text #2 ...\n",
+            "[Prompt Expansion] ((realistic busty pornstar)), long black hair, tan skin, seductive eyes, heavy makeup, posing on bed, lingerie, glamour lighting, soft shadows, shallow depth of field, seductive look, photorealistic, 8k, NSFW, iconic, fine, sublime, detailed, intricate, innocent, balanced, dramatic, thought limited, epic\n",
+            "[Fooocus] Encoding positive #1 ...\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.12 seconds\n",
+            "[Fooocus] Encoding positive #2 ...\n",
+            "[Fooocus] Encoding negative #1 ...\n",
+            "[Fooocus] Encoding negative #2 ...\n",
+            "[Parameters] Denoising Strength = 1.0\n",
+            "[Parameters] Initial Latent shape: Image Space (1280, 768)\n",
+            "Preparation time: 3.10 seconds\n",
+            "Using karras scheduler.\n",
+            "[Fooocus] Preparing task 1/2 ...\n",
+            "[Sampler] refiner_swap_method = joint\n",
+            "[Sampler] sigma_min = 0.0291671771556139, sigma_max = 14.614643096923828\n",
+            "Requested to load SDXL\n",
+            "Loading 1 new model\n",
+            "[Fooocus Model Management] Moving model(s) has taken 1.71 seconds\n",
+            " 67% 20/30 [00:18<00:09,  1.11it/s]"
           ]
         }
       ],
